--- a/DownloadFilms/src/pl/download/graphic/ShowFiles.form
+++ b/DownloadFilms/src/pl/download/graphic/ShowFiles.form
@@ -21,28 +21,37 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="ShowPanel" pref="1045" max="32767" attributes="0"/>
-                  </Group>
                   <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="1" attributes="0">
-                          <Component id="searchWordField" min="-2" pref="65" max="-2" attributes="0"/>
-                          <Component id="labelSearchWord" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" attributes="0">
-                              <Component id="pageField" min="-2" pref="65" max="-2" attributes="0"/>
+                          <Component id="labelSearchWord" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="searchWordField" min="-2" pref="298" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="searchButton" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <Component id="labelPage" alignment="0" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
+                              <Component id="labelPageMax" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
+                              <Component id="labelPage" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="-2" pref="83" max="-2" attributes="0"/>
+                              <Component id="maxPageField" min="-2" pref="59" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="149" max="-2" attributes="0"/>
+                              <Component id="pageField" min="-2" pref="65" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="67" max="-2" attributes="0"/>
+                              <Component id="allPageViewButton" min="-2" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
+                  <Component id="ShowPanel" alignment="0" pref="1045" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -55,12 +64,15 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="labelSearchWord" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="labelPage" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="labelPageMax" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="searchWordField" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="pageField" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="searchButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="maxPageField" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="allPageViewButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="ShowPanel" min="-2" pref="322" max="-2" attributes="0"/>
@@ -100,12 +112,27 @@
     </Component>
     <Component class="javax.swing.JLabel" name="labelSearchWord">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Szukany plik"/>
+        <Property name="text" type="java.lang.String" value="Szukany plik:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="labelPage">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Ilo&#x15b;&#x107; stron"/>
+        <Property name="text" type="java.lang.String" value="Ilo&#x15b;&#x107; stron do wy&#x15b;wietlenia:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JTextField" name="maxPageField">
+      <Properties>
+        <Property name="enabled" type="boolean" value="false"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="labelPageMax">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Dostepnych stron wyszukiwanej frazy:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="allPageViewButton">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Poka&#x17c; wyniki"/>
       </Properties>
     </Component>
   </SubComponents>
