--- a/DownloadFilms/src/pl/download/graphic/ShowFiles.form
+++ b/DownloadFilms/src/pl/download/graphic/ShowFiles.form
@@ -134,6 +134,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Poka&#x17c; wyniki"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="allPageViewButtonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
