--- a/DownloadFilms/src/pl/download/graphic/Graphic.form
+++ b/DownloadFilms/src/pl/download/graphic/Graphic.form
@@ -98,6 +98,7 @@
     </Component>
     <Component class="javax.swing.JRadioButton" name="wgetRadio">
       <Properties>
+        <Property name="selected" type="boolean" value="true"/>
         <Property name="text" type="java.lang.String" value="Generuj wget"/>
       </Properties>
     </Component>
