--- a/DownloadFilms/src/pl/download/graphic/ShowFiles.form
+++ b/DownloadFilms/src/pl/download/graphic/ShowFiles.form
@@ -97,6 +97,10 @@
             <Property name="editable" type="boolean" value="false"/>
             <Property name="columns" type="int" value="20"/>
             <Property name="rows" type="int" value="5"/>
+            <Property name="autoscrolls" type="boolean" value="false"/>
+            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+              <Color id="Default Cursor"/>
+            </Property>
           </Properties>
         </Component>
       </SubComponents>
@@ -125,6 +129,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="maxPageField">
       <Properties>
+        <Property name="editable" type="boolean" value="false"/>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
     </Component>
