--- a/DownloadFilms/src/pl/download/graphic/Graphic.form
+++ b/DownloadFilms/src/pl/download/graphic/Graphic.form
@@ -27,6 +27,8 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Component id="showFilesButton" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="82" max="-2" attributes="0"/>
+              <Component id="getCookieButton" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
           <Group type="102" alignment="0" attributes="0">
@@ -70,7 +72,10 @@
                   <Component id="jScrollPane1" alignment="1" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="showFilesButton" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="showFilesButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="getCookieButton" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -121,6 +126,14 @@
         <Property name="selected" type="boolean" value="true"/>
         <Property name="text" type="java.lang.String" value="Generuj z wget"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="getCookieButton">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Pobierz Cookie"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="getCookieButtonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
